completed routes, controllers, validations, and swagger for enrollments
